syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "CalendarExtractor.API";

package azure;

service Azure {
	rpc GetCalendarInformation (AzureRequest) returns (stream AzureReplyEvent);
	rpc TestGetCalendarInformation (AzureRequest) returns (stream AzureReplyEvent);
}

message AzureRequest {
	message Client {
		string clientId = 1;
		string clientSecret = 2;
		string tenantId = 3;
	}
	message Calendar {
		string calendarId = 1;
		google.protobuf.Timestamp beginTimestamp = 2;
		google.protobuf.Timestamp endTimestamp = 3;
	}
	Client client = 1;
	Calendar calendar = 2;
}

message AzureReplyEvent {
	string subject = 1;
	google.protobuf.Timestamp beginTimestamp = 2;
	google.protobuf.Timestamp endTimestamp = 3;
}